take the sub menus out of the JS file and place into the HTML file, adjust event listener to match the new layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ header {
     text-decoration: underline;
 }
 
-#sub-menu-container{
+#responsible-sub-menu, #rules-sub-menu{
     display: none;
     position: relative;
 }
