trouble shoot bug on game rules menu, add some comments and deleted some redundant code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,12 @@ header {
     text-decoration: underline;
 }
 
-#responsible-sub-menu, #rules-sub-menu{
+#responsible-sub-menu {
+    display: none;
+    position: relative;
+}
+
+#rules-sub-menu{
     display: none;
     position: relative;
 }
