--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ header {
     font-family: 'Acme', sans-serif;
     justify-content: space-between;
     outline: none;
-    padding: 0 7px;
+    padding: 1px 7px;
     width: 100%;
     text-align: left;
     transition: 0.4s;
@@ -150,7 +150,7 @@ text-shadow: 3px 2px 2px #fbf5b7;
 .rule-segment {
     max-height: 0;
     overflow: hidden;
-    padding: 0 18px;
+    padding: 0 5px;
     text-align: left;
     transition: max-height 0.4s ease-out;
 }
