remove h3 tags on rule heading buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ header {
     cursor: pointer;
     display: flex;
     font-family: 'Acme', sans-serif;
+    font-weight: bold;
     justify-content: space-between;
     outline: none;
     padding: 1px 7px;
