Change font awesome import to JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,8 @@ footer {
 }
 
 #copyright {
-    font-size: 6px;
+    font-family: 'Acme', sans-serif;
+    font-size: 10px;
 }
 
 /* Media queries */
