--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 /*temporary to combat chrome dark theme*/
 body {
-    background-color: 	#00FFBF;
+    background-color: 	#98FB98;
 }
 
 header {
@@ -93,7 +93,7 @@ header {
     font-family: 'Acme', sans-serif;
     font-size: 32px;
     font-weight: 700;
-    padding: 15px 0 0;
+    padding: 3px 0 2px;
 }
 
 .menu-sub-heading {
@@ -186,7 +186,7 @@ text-shadow: 3px 2px 2px #fbf5b7;
 /* Button styling */
 /* Menu buttons */
 .back-to-menu {
-    bottom: 5px;
+    bottom: 9px;
     position: absolute;
     right: 50%;
     transform: translateX(50%);
