--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,11 +421,6 @@ footer {
 
     .social-icon {
         font-size: 2.8125rem;
-        margin: 4%;
-    }
-    
-    #copyright {
-        font-size: 0.75rem;
     }
 }
 
@@ -458,6 +453,9 @@ footer {
 
     #description {
         font-size: 1rem;
+    }
+    .social-icon {
+        font-size: 3.8125rem;
     }
 }
 
