--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,10 @@ header {
     transform: translateX(50%);
 }
 
+#to-table-btn {
+    display: none;
+}
+
 .menu-opt-btn {
     border: 2px solid #000;
     border-radius: 0.9375rem;
